tests/ui/functional-struct-update/fru-unknown-field-in-closure.stderr
error[E0560]: struct `Point` has no field named `nonexistent`
  --> $DIR/fru-unknown-field-in-closure.rs:17:13
   |
LL |             nonexistent: 0,
   |             ^^^^^^^^^^^ `Point` does not have this field
   |
   = note: available fields are: `x`, `y`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0560`.
